--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,12 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+monitor_speed = 115200
+monitor_port = COM5
+upload_port = COM5
+upload_speed = 115200
+lib_deps = 
+	milesburton/DallasTemperature@^3.11.0
+	paulstoffregen/OneWire@^2.3.7
+	bblanchon/ArduinoJson@^6.20.1
+	knolleary/PubSubClient@^2.8
